--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Krish</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Kelly</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -75,34 +75,34 @@
 
         <div class="section-title">
           <h2>About</h2>
-          
+        </div>
+
         <div class="row">
           <div class="col-lg-4">
             <img src="assets/img/avatar.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Student &amp; Freelance Technology Consultant</h3>
+            <h3>Student &amp; Freelance Technology Consultant>
 
             <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+              <div class="col-lg-6">
+                <ul>
+                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(609)-556-8516</span></li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>2003kshah@gmail.com</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>2003kshah@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chesterfield, NJ</span></li>
-              </ul>
+                </ul>
+              </div>
             </div>
-          </div>
-           <p><strong>Northern Burlington High School | GPA: </strong>99.888</p>
+          <p><strong>Northern Burlington High School | GPA: </strong>99.888</p>
           <p><strong>Relavent Coursework: </strong>AP Statistics, AP Seminar, Engineering ll, AP Computer Science Principles, Chemistry Honors, Algebra l, Geometry Honors, Algebra ll Honors, Pre-Calculus Honors, AP Computer Science A, AP Chemistry, AP Physics, AP US History ll, AP Calculus AB, English lll Honors</p>
           <p><strong>Academic Honors: </strong>Consecutive High Honor Roll, High Honor Roll with Distinction, National Honor Society, Spanish Honor Society, Boys State</p>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
@@ -111,14 +111,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-        <h2>Skills</h2>
-      </div>
+          <h2>Skills</h2>
+        </div>
 
-      <div class="row skills-content">
+        <div class="row skills-content">
 
-        <div class="col-lg-6">
+          <div class="col-lg-6">
 
-          <div class="progress">
+            <div class="progress">
             <span class="skill">HTML5 <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -146,11 +146,11 @@
             </div>
           </div>
 
-        </div>
+          </div>
 
-        <div class="col-lg-6">
+          <div class="col-lg-6">
 
-          <div class="progress">
+           <div class="progress">
             <span class="skill">Photoshop <i class="val">65%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
@@ -178,9 +178,9 @@
             </div>
           </div>
 
-        </div>
+          </div>
 
-      </div>
+        </div>
 
       </div>
     </section><!-- End Skills Section -->
@@ -191,14 +191,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <strong><span>Krish Shah</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End  Footer -->
@@ -221,4 +214,4 @@
 
 </body>
 
-</html>
+</html> 
