--- a/about.html
+++ b/about.html
@@ -185,6 +185,42 @@
 
       </div>
     </section><!-- End Skills Section -->
+    
+    <!-- ======= Interests ======= -->
+    <div class="interests container">
+
+      <div class="section-title">
+        <h2>Interests</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <i class="ri-database-2-line" style="color: #ffbb2c;"></i>
+            <h3>Machine Learning</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+            <h3>Data Analytics</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <i class="bi-code-square" style="color: #e80368;"></i>
+            <h3>Programming</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <i class="bi bi-book" style="color: #e361ff;"></i>
+            <h3>Teaching</h3>
+          </div>
+        </div>
+      </div>
+
+    </div><!-- End Interests -->
 
   </main><!-- End #main -->
 
