--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-game">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/SpiderMan.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
